[package]
name = "request_id_middleware"
version = "0.1.0"
authors = ["Nebeto <contact@nebeto.xyz>"]
edition = "2024"
description = "Custom extractor for Rust Axum to extract the request id from an HTTP header x-request-id."
readme = "README.md"
repository = "https://github.com/nebetoxyz/rust-request-id-middleware--lib"
license-file = "LICENSE.md"
keywords = ["middleware", "header", "x-request-id"]
categories = ["web-programming"]
exclude = [".github/", ".vscode/", ".gitignore"]

[lib]
path = "src/lib.rs"
test = true
doctest = true
bench = false
doc = true
crate-type = ["lib"]

[dependencies]
axum = "0.8.3"
tokio = "1.44.2"
uuid = { version = "1.16.0", features = ["v7"] }
